<resources>
    <string name="app_name">TimeKeep</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="fourth_fragment_label">Fourth Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="welcome_timekeep">Welcome to my Timekeeper Application.</string>
    <string name="welcome_enter">Enter first item.</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="firstTimeSlot">First Time Slot</string>
    <string name="secondTimeSlot">Second Time Slot</string>
    <string name="NextTextView">Next Text View</string>
    <string name="lowTextView">Low Text View</string>
    <string name="textConfirm">Confirm</string>
    <string name="fourthFragmentYouGotIt">You Got It!</string>
    <string name="fourthGoBack">Go Back</string>
</resources>