<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <TextView
        android:id="@+id/textViewFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstTimeSlot"
        app:layout_constraintBottom_toTopOf="@id/textViewSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_toTopOf="@id/textViewSecond" />

    <TextView
        android:id="@+id/textViewSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondTimeSlot"
        app:layout_constraintBottom_toTopOf="@id/textViewNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFirst" />

    <TextView
        android:id="@+id/textViewNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NextTextView"
        app:layout_constraintBottom_toTopOf="@id/textViewLow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSecond" />

    <TextView
        android:id="@+id/textViewLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowTextView"
        app:layout_constraintBottom_toTopOf="@id/buttonConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNext" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLow" />
</androidx.constraintlayout.widget.ConstraintLayout>